fix broken 1.4 build
git-svn-id: https://svn.codehaus.org/grails/trunk@893 1cfb16fd-6d17-0410-8ff1-b7e8e1e2867d